--- a/LearningPlatform.API/appsettings.Development.json
+++ b/LearningPlatform.API/appsettings.Development.json
@@ -15,5 +15,11 @@
     "Audience": "audience", // изадетль - приложение создающее токен
     "Issuer": "issuer", // кто принимет токен
     "EpiresHours": "12" // время действия токена, для его обновления используется RefreshToken
+  },
+  "AuthorizationOptions": {
+    "RolePermissions": [
+      { "Role": "Admin", "Permission": [ "Create", "Read", "Update", "Delete" ] },
+      { "Role": "User", "Permissions": [ "Read" ] }
+    ]
   }
 }
