--- a/LearningPlatform.API/appsettings.Development.json
+++ b/LearningPlatform.API/appsettings.Development.json
@@ -18,7 +18,7 @@
   },
   "AuthorizationOptions": {
     "RolePermissions": [
-      { "Role": "Admin", "Permission": [ "Create", "Read", "Update", "Delete" ] },
+      { "Role": "Admin", "Permissions": [ "Create", "Read", "Update", "Delete" ] },
       { "Role": "User", "Permissions": [ "Read" ] }
     ]
   }
